chore(deps): upgrade to Spring Boot 3